<resources>
    <string name="app_name">Webservices</string>
    <string name="t2_manual">Manual XML</string>
    <string name="t2_library">SOAP Library</string>
    <string name="waiting">Waiting for response...</string>
    <string name="btn_text_rest">REST CLIENT</string>
    <string name="btn_text_soap">SOAP CLIENT</string>
    <string name="btn_text_server">SERVER CLIENT</string>
    <string name="t1_http">RAW HTTP</string>
    <string name="t1_text">TEXT</string>
    <string name="t1_json">JSON</string>
    <string name="raw_http">RAW HTTP</string>
    <string name="text">TEXT</string>
    <string name="json">JSON</string>
    <string name="rest_client">REST CLIENT</string>
    <string name="soap_client">SOAP CLIENT</string>
    <string name="server_client">SERVER CLIENT</string>
    <string name="ip_address">IP Address:</string>
    <string name="port">Port:</string>
    <string name="default_port">0000</string>
    <string name="default_ip">0.0.0.0</string>

    <string name="html_link"><![CDATA[<a href=\"http://|#|#|IP|#|#|:|#|#|PORT|#|#|/|#|#|FOLDER|#|#|\">|#|#|SHOW|#|#|</a><br>]]></string>
    <string name="html_radio"><![CDATA[<input type=\"radio\" name=\"|#|#|NAME|#|#|\" value=\"|#|#|VALUE|#|#|\" |#|#|CHECKED|#|#|>|#|#|SHOW|#|#|]]></string>
    <string name="html_submit"><![CDATA[<input type=\"submit\" name=\"submit\" value=\"set\">]]></string>
    <string name="html_form">
        <![CDATA[
            <form name=\"|#|#|NAME|#|#|\" method=\"get\" action=\"|#|#|ACTION|#|#|\">\r\n
                |#|#|FORM|#|#|\r\n
            </form>]]>
    </string>
    <string name="html_error">
        <![CDATA[
            <!DOCTYPE HTML>\r\n
            <head>\r\n
                <script type=\"text/javascript\">\r\n
                    function countdown(i){\r\n
                        if (i == undefined){\r\n
                            i = 5;\r\n
                        }\r\n
                        if (i > 0){\r\n
                            document.getElementById(\"jsid\").innerHTML = \"Redirect to main page in \" + i + \"s\";\r\n
                            i = i - 1;\r\n
                            var timeout = window.setTimeout(\"countdown(\" + i + \")\", 1000);\r\n
                        }\r\n
                        else {\r\n
                            window.location.href = \"/\";\r\n
                        }\r\n
                    }\r\n
                </script>\r\n
            </head>\r\n
            <body>\r\n
                <p>Page not found.</p>\r\n
                <p id=\"jsid\"></p>\r\n
                <script type=\"text/javascript\">\r\n
                    countdown(5);\r\n
                </script>\r\n
                <noscript>\r\n
                    To go to the main page click <a href=\"/\">here</a>\r\n
                </noscript>\r\n
            </body>\r\n
        </html>]]>
    </string>
    <string name="html_file">
        <![CDATA[
            <!DOCTYPE html>\r\n
            <html>\r\n
                <body>\r\n
                    |#|#|BODY|#|#|\r\n
                </body>\r\n
            </html>\r\n
        ]]>
    </string>
</resources>
