<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    tools:context="ch.ethz.inf.vs.a2.ankoller.webservices.MainActivity">
    <TextView
        android:id="@+id/ankoller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_rest"
        android:text="@string/rest_client"
        android:onClick="onButtonClick"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_soap"
        android:text="@string/soap_client"
        android:onClick="onButtonClick"
        />
    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_server"
        android:text="@string/server_client"
        android:onClick="onButtonClick"
        />
</LinearLayout>
