<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.ethz.inf.vs.a2.ankoller.webservices.ServerActivity">

    <TextView
        android:id="@+id/ip_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_address"
        app:layout_constraintBaseline_toBaselineOf="@+id/ip_address_view"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/port_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/port_address_view" />

    <TextView
        android:id="@+id/ip_address_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/default_ip"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ip_view"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/port_address_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_port"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ip_address_view"
        app:layout_constraintLeft_toRightOf="@+id/port_view"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onButtonClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/port_address_view"
        app:layout_constraintHorizontal_bias="0.0" />
</android.support.constraint.ConstraintLayout>
